@@ -32,12 +32,15 @@ Easier:
 - Make sure ilFixImage is called everytime something is loaded.
 - Add JPEG 2000 extensions from http://www.library.cornell.edu/preservation/tutorial/presentation/table7-1.html.
 - Add BLP calls to il_io.c.
+- For BLP2 raw, check for alpha field at end.
+- Add BLP loading of mipmaps for all other types (jpeg will be the hardest).
 - Find out why BLP2 files do not follow DXTC specs when width or height < 4.
   It looks like they are not wasting space with the small mipmaps.
   An example is a 2x8 image in DXT5.  Their mipmap length claims to be 16, instead of 32.
 - Recompile libtiff with extra options (but not jpeg...).
 - Add IL_PAL_BGRX define for BLP files (alpha is discarded).
 - Clean up ilSetAlpha.
+- DxtcReadColor and DxtcReadColors need to expand the colours from 565 to 888 properly.
 - Add faces to WindowsTest.
 - Add reading other files in directory to WindowsTest, so you can easily view all files in a dir.
 - Rename WindowsTest to WindowsExample.
@@ -110,6 +113,7 @@ More involved:
 - Fortran support
 - D language support - There exists a program to convert C headers to D.
 - Better DirectX 10 support
+- Open URL in WindowsTest not working
 - Should probably check for errors in iGetWdpHead and etc...
 - ilGetAlpha returns malloc'ed memory that cannot be freed by the caller.
 - Support for DX10 .dds files - one new format is found in HDRRendering sample in nVidia DX10 SDK.
